objects/FL_Upload_Manifest__c.object
<CustomObject>
    <fields>
        <fullName>CRC32__c</fullName>
        <label>CRC32</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Changed_By__c</fullName>
        <label>Changed By</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Changed_On__c</fullName>
        <label>Changed On</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Commit_Status__c</fullName>
        <label>Commit Status</label>
        <picklist>
            <picklistValues>
                <fullName>Safe To Commit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not To Commit</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Component_Name__c</fullName>
        <label>Component Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Component_Type__c</fullName>
        <label>Component Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>File_Name__c</fullName>
        <label>File Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reason__c</fullName>
        <label>Reason</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Upload_Log__c</fullName>
        <label>Upload Log</label>
        <referenceTo>FL_Upload_Log__c</referenceTo>
        <relationshipLabel>Upload Manifest</relationshipLabel>
        <relationshipName>Upload_Manifest</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Upload Manifest</label>
    <nameField>
        <displayFormat>UM-{YYYY}-{MM}-{DD}-{0000}</displayFormat>
        <label>Upload Manifest Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Upload Manifest</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>